--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "private": true,
   "scripts": {
     "start": "./node_modules/.bin/nodemon --ignore node_modules shortly.js",
-    "test": "node shortly.js & ./node_modules/.bin/mocha --bail --reporter nyan test/ServerSpec.js; pkill -n node;",
+    "test": "node shortly.js & ./node_modules/.bin/mocha --bail test/ServerSpec.js; pkill -n node;",
     "postinstall": "bash pomander.sh",
     "lint": "eslint ./"
   },
