--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "forever": "^0.10.11",
     "knex": "^0.9.0",
     "nodemon": "^1.8.1",
+    "passport": "^0.3.2",
+    "passport-github": "^1.1.0",
     "request": "^2.34.0",
     "sqlite3": "~3.0.5"
   },
